--- a/index.html
+++ b/index.html
@@ -33,30 +33,41 @@
   <div class="container">
     <!-- header -->
     <div id="header" class="row">
-      <div class="six columns">
+      <div class="one columns">
       &nbsp;
       </div>
       <div class="six columns">
+        <center>
+        <img class="cover" src="images/title.gif" />
+        </center>
+      </div>
+      <div class="five columns">
         <div id="nav">
           <a href="#about-book">the book</a>
           <a href="#about-author">the author</a>
           <a href="#buy-now">buy now</a>
         </div>
       </div>
-        <h1>60 Great Baby Food Recipes</h1>
         
     </div>
 
     <!-- Home Slider -->
     <div id="home">
       <div class="row">
-        <h1>Home</h1>
         <div class="twelve columns">
-          <div id="featured" style="width:600px; height:370px"> 
-            <img src="images/ragi_powder.JPG" alt="Overflow: Hidden No More" />
-            <img src="images/moong_chaat.JPG" alt="Overflow: Hidden No More" />
-            <img src="images/vermicelli_upma.JPG" alt="Overflow: Hidden No More" />
-            <img src="images/mini_idlies.JPG" alt="Overflow: Hidden No More" />
+          <div class="section_title sub_title">
+            60 nutritious, healthy Indian vegeterian baby food that you can start giving your toddler 6 months onwards
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="one columns">&nbsp;</div>
+        <div class="ten columns">
+          <div id="featured" style=""> 
+            <img src="images/ragi_powder.JPG" width=638 alt="Overflow: Hidden No More" />
+            <img src="images/moong_chaat.JPG" width=638 alt="Overflow: Hidden No More" />
+            <img src="images/vermicelli_upma.JPG" width=638 alt="Overflow: Hidden No More" />
+            <img src="images/mini_idlies.JPG" width=638 alt="Overflow: Hidden No More" />
           </div>
 
       </div>
@@ -66,7 +77,9 @@
     <div id="about-book" class="section">
       <div class="row">
         <div class="twelve columns">
-          <h2>About the Book</h2>
+          <h2 class="section_title">About the Book</h2>
+          <p>8 months to 2 years is one of the very critical phase in a child's growth. 8 months is around the time when the child starts having food. Child's tastebuds are not fully developed and neither is her digestive system. There are a lot of do's and don't around this age which your child's pediatric would have instructed you about.</p>
+          <p>The book is divided in three phases coinciding with child's growth. The first part focuses when the child is 6-8 months old. These recipes introduces food to the baby which gives her subtle taste of what is to come while ensuring that the item is high in nutrition.</p>
         </div>
       </div>
 
@@ -86,7 +99,10 @@
     <div id="about-author" class="section">
       <div class="row">
         <div class="twelve columns">
-          <h2>Roma Sharma - The Author</h2>
+          <h2 class="section_title">Roma Sharma - The Author</h2>
+          <p>Roma Sharma is an engineer by education and a Chef by passion. She remembers the time when she was 4 year old and would instruct her mother to make dishes based on her recipes sitting on the kitchen platform. Passion took a back seat when education and making a corporate career aparently started becoming important. Soon enough she realized the futility of building a purpose-less career and bid, her high paying job at Kyocera a bye.</p>
+          <p>She started <a href="http://romasharma.com">blogging</a> her recipes and soon found an interest in Photography. She says the food not only stimulates your test bud and smell, but is also a treat to eyes. She took a Kalyan Verma's course in photography, bought a Canon DSLR and started learning the nuances of Photography on the fly. With just plain sunlight in her terrace and her assistant (read husband) holding the scrimp, she has some of the most apealing photos of her concoction.</p>
+          <p>One year since she started blogging and while raising Raina who was around a year old she created 100 recipes at an average of about 2 a week. Not only were these recipes her own creation, she completed it with a fine photo shoot. </p>
         </div>
       </div>
     </div>
@@ -95,7 +111,10 @@
     <div id="buy-now" class="section">
       <div class="row">
         <div class="twelve columns">
-          <h2>Buy Now</h2>
+          <h2 class="section_title">Buy Now</h2>
+<!--
+          <div rel="WUVQW1SQ" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="babyfoodrecipes.in" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+-->
         </div>
       </div>
     </div>
