--- a/index.html
+++ b/index.html
@@ -78,8 +78,25 @@
       <div class="row">
         <div class="twelve columns">
           <h2 class="section_title">About the Book</h2>
-          <p>8 months to 2 years is one of the very critical phase in a child's growth. 8 months is around the time when the child starts having food. Child's tastebuds are not fully developed and neither is her digestive system. There are a lot of do's and don't around this age which your child's pediatric would have instructed you about.</p>
-          <p>The book is divided in three phases coinciding with child's growth. The first part focuses when the child is 6-8 months old. These recipes introduces food to the baby which gives her subtle taste of what is to come while ensuring that the item is high in nutrition.</p>
+          <p>
+          The book contains a set of 60 Indian recipes categorized based on the baby’s age. It takes you through the stages of the baby’s growth from 6 to 18 months. All recipes are purely vegetarian. The recipes contain - </br>
+           1) notes to help you get a good end result. </br>
+           2) nutritional value of the dish being prepared that will help you decide whats best for your baby. </br>
+           3) photographs to help you visualize the dish better. </br>
+          </p>
+          <p>
+          The book also contains information on how to introduce solids to the baby - the age at which you can start nutritive food of the right texture for your baby. Tips have been provided on how to tackle a fussy eater. You can know more about starting external milk and tips on how to help a baby who dislikes milk.
+          </p>
+          <p>
+          Travelling with a baby can be quite a challenge as most parents are anxious about feeding the baby anything bought outside. Considering this, the book contains information on travel food. Recipes have been suggested of dishes which have a long shelf life and can be useful during journeys. Instant powders and mixes can help you whisk a filling meal anytime anywhere. 
+          </p>
+          <p>
+          In the first one year we find babies frequently facing problems like stomach ache due to gas, diarrhea, nappy rash, constipation, cold, etc; Instead of immediately seeking medical attention its advisable to try out some simple remedies at home. In fact, that is exactly what our grandmothers use to do during those days when doctors where not easily available. This book provides some of those home remedies that could help you relieve your baby of minor ailments at home. (This information however does not replace medical advice. Please consult a doctor for persistent issues.)
+          </p>
+          <p>
+          With all the recipes provided to tickle the taste buds of your little one its important to remember that we suggest you continue to breast feed your baby up to the age of 2 years. The dishes suggested are not intended to replace breast milk which is the best food for your baby. The book contains details on the benefits of breast feeding. Please read through it before deciding when to wean your baby off breast milk.
+          </p>
+          
         </div>
       </div>
 
@@ -89,9 +106,6 @@
             <img src="images/cover.jpg" />
           </div>
         </div>
-        <div class="eight columns">
-          When my first daughter was 6 months old, I started researching on various solid foods that I could give her. 
-        </div>
       </div>
     </div>
 
@@ -100,9 +114,15 @@
       <div class="row">
         <div class="twelve columns">
           <h2 class="section_title">Roma Sharma - The Author</h2>
-          <p>Roma Sharma is an engineer by education and a Chef by passion. She remembers the time when she was 4 year old and would instruct her mother to make dishes based on her recipes sitting on the kitchen platform. Passion took a back seat when education and making a corporate career aparently started becoming important. Soon enough she realized the futility of building a purpose-less career and bid, her high paying job at Kyocera a bye.</p>
-          <p>She started <a href="http://romasharma.com">blogging</a> her recipes and soon found an interest in Photography. She says the food not only stimulates your test bud and smell, but is also a treat to eyes. She took a Kalyan Verma's course in photography, bought a Canon DSLR and started learning the nuances of Photography on the fly. With just plain sunlight in her terrace and her assistant (read husband) holding the scrimp, she has some of the most apealing photos of her concoction.</p>
-          <p>One year since she started blogging and while raising Raina who was around a year old she created 100 recipes at an average of about 2 a week. Not only were these recipes her own creation, she completed it with a fine photo shoot. </p>
+          <p>
+          I am a software engineer by education and a chef by passion. After an experience of 6 years in the IT industry I turned a home maker. With two kids now I spend most of my time  creating new dishes to excite them with. Besides cooking, I have hobbies like photography and <a href="http://romasharma.com">blogging</a>. I love experimenting with different types of cuisines and seldom leave a restaurant without trying to learn something new out of what I have eaten.
+          </p>
+          <p>
+          When I had a baby I realized that baby food is a really confusing subject. The type of food that can be fed to a baby at each stage of growth is something that we need to check on every time we introduce something new. My baby’s pediatrician was helpful in this regard. She would clarify my doubts on ingredients permitted for my baby at each stage. I also had the good fortune of talking to my grandmother about the dishes she use to feed her kids. My mother shared knowledge she had on medicinal and travel food. I started <a href="http://romasharma.com">blogging</a> these recipes when my first baby was 8 months old. Along with blogging, I started writing this book when I introduced solids to my first baby 4 years ago. Now with another 18-month old I have updated more recipes and have compiled all the information I have to make a book that is easy to consume.
+          </p>
+		   <p>
+		   I hope you enjoy reading this book and above that I hope your baby likes the dishes provided. I would love to hear from you : roma(at)romasharma(dot)com
+		   </p>
         </div>
       </div>
     </div>
