changed cover image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="twelve columns">
           <div class="section_title sub_title">
-            60 nutritious, healthy Indian vegeterian baby food that you can start giving your toddler 6 months onwards
+            60 nutritious, Indian vegeterian baby food dishes that you can start feeding your toddler 6 months onwards
           </div>
         </div>
       </div>
