--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
         <div class="one columns">&nbsp;</div>
         <div class="ten columns">
           <div id="featured" style=""> 
-            <img src="images/ragi_powder.JPG" width=638 alt="Overflow: Hidden No More" />
+            <img src="images/sprouts_bhel.JPG" width=638 alt="Overflow: Hidden No More" />
+            <img src="images/aata_halwa.JPG" width=638 alt="Overflow: Hidden No More" />            
             <img src="images/moong_chaat.JPG" width=638 alt="Overflow: Hidden No More" />
             <img src="images/vermicelli_upma.JPG" width=638 alt="Overflow: Hidden No More" />
             <img src="images/mini_idlies.JPG" width=638 alt="Overflow: Hidden No More" />
+            <img src="images/carrot_halwa.JPG" width=638 alt="Overflow: Hidden No More" />         
           </div>
 
       </div>
@@ -79,22 +81,21 @@
         <div class="twelve columns">
           <h2 class="section_title">About the Book</h2>
           <p>
-          The book contains a set of 60 Indian recipes categorized based on the baby’s age. It takes you through the stages of the baby’s growth from 6 to 18 months. All recipes are purely vegetarian. The recipes contain - </br>
-           1) notes to help you get a good end result. </br>
-           2) nutritional value of the dish being prepared that will help you decide whats best for your baby. </br>
-           3) photographs to help you visualize the dish better. </br>
+          The book contains a set of 60 <b>Indian Vegetarian recipes</b> categorized based on the baby’s age. It takes you through the stages of the baby’s growth from 6 to 18 months. The recipes contain 
+          notes to help you get a good end result and
+          nutritional value of the dish being prepared that will help you decide whats best for your baby.           
           </p>
           <p>
-          The book also contains information on how to introduce solids to the baby - the age at which you can start nutritive food of the right texture for your baby. Tips have been provided on how to tackle a fussy eater. You can know more about starting external milk and tips on how to help a baby who dislikes milk.
+          The book also contains information on <b>how to introduce solids</b> to the baby - the age at which you can start nutritive food of the right texture for your baby. Tips have been provided on how to tackle a fussy eater and a baby who dislikes milk. 
           </p>
           <p>
-          Travelling with a baby can be quite a challenge as most parents are anxious about feeding the baby anything bought outside. Considering this, the book contains information on travel food. Recipes have been suggested of dishes which have a long shelf life and can be useful during journeys. Instant powders and mixes can help you whisk a filling meal anytime anywhere. 
+          In the first one year we often find babies facing problems like stomach ache due to gas, diarrhea, nappy rash, constipation, cold, etc; Instead of immediately seeking medical attention its advisable to try out some simple remedies at home. In fact, that is exactly what our grandmothers use to do during those days when doctors where not easily available. This book provides some of those <b>home remedies</b> that could help you relieve your baby of minor ailments at home. (This information however does not replace medical advice. Please consult a doctor for persistent issues.)
           </p>
           <p>
-          In the first one year we find babies frequently facing problems like stomach ache due to gas, diarrhea, nappy rash, constipation, cold, etc; Instead of immediately seeking medical attention its advisable to try out some simple remedies at home. In fact, that is exactly what our grandmothers use to do during those days when doctors where not easily available. This book provides some of those home remedies that could help you relieve your baby of minor ailments at home. (This information however does not replace medical advice. Please consult a doctor for persistent issues.)
-          </p>
+          Once the baby is old enough to travel often parents feel like taking a break from the monotonous baby care routine. However, travelling with a baby can be quite a challenge as its risky to feed a little baby anything bought outside. Considering this, the book contains information on <b>travel food</b>. Recipes have been suggested of dishes which have a long shelf life and can be useful during journeys. Instant powders and mixes can help you whisk a filling meal anytime, anywhere. 
+          </p>          
           <p>
-          With all the recipes provided to tickle the taste buds of your little one its important to remember that we suggest you continue to breast feed your baby up to the age of 2 years. The dishes suggested are not intended to replace breast milk which is the best food for your baby. The book contains details on the benefits of breast feeding. Please read through it before deciding when to wean your baby off breast milk.
+          With all the recipes provided to tickle the taste buds of your little one, its important to remember that we suggest you continue to breast feed your baby up to the age of 2 years. The dishes suggested are not intended to replace breast milk which is the best food for your baby. The book contains details on the <b>benefits of breast feeding</b>. Please read through it before deciding when to wean your baby off breast milk.
           </p>
           
         </div>
@@ -115,13 +116,13 @@
         <div class="twelve columns">
           <h2 class="section_title">Roma Sharma - The Author</h2>
           <p>
-          I am a software engineer by education and a chef by passion. After an experience of 6 years in the IT industry I turned a home maker. With two kids now I spend most of my time  creating new dishes to excite them with. Besides cooking, I have hobbies like photography and <a href="http://romasharma.com">blogging</a>. I love experimenting with different types of cuisines and seldom leave a restaurant without trying to learn something new out of what I have eaten.
+          Roma is a software engineer by education and a chef by passion. After an experience of 6 years in the IT industry she turned a home maker. With two kids now she spends most of her time creating new dishes to excite them with. Besides cooking, she has hobbies like photography and <a href="http://romasharma.com">blogging</a>. She loves experimenting with different types of cuisines and seldom leaves a restaurant without trying to learn something new.
           </p>
           <p>
-          When I had a baby I realized that baby food is a really confusing subject. The type of food that can be fed to a baby at each stage of growth is something that we need to check on every time we introduce something new. My baby’s pediatrician was helpful in this regard. She would clarify my doubts on ingredients permitted for my baby at each stage. I also had the good fortune of talking to my grandmother about the dishes she use to feed her kids. My mother shared knowledge she had on medicinal and travel food. I started <a href="http://romasharma.com">blogging</a> these recipes when my first baby was 8 months old. Along with blogging, I started writing this book when I introduced solids to my first baby 4 years ago. Now with another 18-month old I have updated more recipes and have compiled all the information I have to make a book that is easy to consume.
+          When Roma first had a baby she realized that baby food is a really confusing subject. The type of food that can be fed to a baby at each stage of growth is something that needs to be checked every time something new is introduced. Her baby’s pediatrician was helpful in this regard. She would clarify doubts on ingredients permitted for the baby at each stage. She also had the good fortune of talking to her grandmother about the dishes she use to feed her kids. Roma's mother shared knowledge she had on medicinal and travel food. She started <a href="http://romasharma.com">blogging</a> these recipes when her first baby was 8 months old. Along with blogging, she started writing this book when she introduced solids to her first baby 4 years ago. Now with another 18 - month old she has updated more recipes and has compiled all the information she has, to create a book that is easy to consume.
           </p>
 		   <p>
-		   I hope you enjoy reading this book and above that I hope your baby likes the dishes provided. I would love to hear from you : roma(at)romasharma(dot)com
+		   We would love to hear from you : roma(at)romasharma(dot)com
 		   </p>
         </div>
       </div>
@@ -131,7 +132,7 @@
     <div id="buy-now" class="section">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="section_title">Buy Now</h2>
+          <h2 class="section_title">Subscribe Now</h2>
 <!--
           <div rel="WUVQW1SQ" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="babyfoodrecipes.in" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
 -->
