--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div id="buy-now" class="section">
       <div class="row">
         <div class="twelve columns">
-          <h2 class="section_title">Subscribe Now</h2>
+          <h2 class="section_title"><a href="http://signup.babyfoodrecipes.in/">Subscribe Now</a></h2>
 <!--
           <div rel="WUVQW1SQ" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="babyfoodrecipes.in" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
 -->
