--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>60 Great Baby Food Recipes</title>
   
   <!-- Included CSS Files -->
-  <link href='http://fonts.googleapis.com/css?family=Simonetta|Prosto+One' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Cutive|Simonetta|Prosto+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/foundation.css">
   <link rel="stylesheet" href="stylesheets/app.css">
 
@@ -112,7 +112,7 @@
         <div class="twelve columns">
           <h2 class="section_title">Roma Sharma - The Author</h2>
           <p>
-            <img align="left" class="book-image" src="images/roma.JPG" />
+            <img align="left" class="book-image" src="images/roma.jpg" />
           Roma is a software engineer by education and a chef by passion. After working for 6 years in the IT industry she turned a home maker. With two kids now she spends most of her time creating new dishes to excite them with. Besides cooking, she has hobbies like photography and <a href="http://romasharma.com">blogging</a>. She loves experimenting with different types of cuisines and seldom leaves a restaurant without learning something new.
           </p>
           <p>
@@ -134,7 +134,7 @@
         <div class="twelve columns">
           <h2 class="section_title">Buy the Book</h2>
             <p>
-            This book will be available as a kindle e-book shortly on Amazon. Do <a href="http://signup.babyfoodrecipes.in/">register here</a> to get notified when the book becomes available. You can download it on kindle and read it at your convenience. Towards the end of 2012, if the world survives we will come out with a phyiscal hard copy.
+            This book will be available as a kindle e-book shortly on <a href="http://amazon.com">Amazon</a>. Do <a href="http://signup.babyfoodrecipes.in/">register here</a> to get notified when the book becomes available. You can download it on kindle and read it at your convenience. Towards the end of 2012, if the world survives we will come out with a phyiscal hard copy.
             </p>
 
             <p>
