--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="twelve columns">
           <h2 class="section_title">Roma Sharma - The Author</h2>
           <p>
-            <img align="left" class="book-image" src="images/roma.jpg" />
+            <img align="left" class="book-image" src="images/roma.JPG" />
           Roma is a software engineer by education and a chef by passion. After working for 6 years in the IT industry she turned a home maker. With two kids now she spends most of her time creating new dishes to excite them with. Besides cooking, she has hobbies like photography and <a href="http://romasharma.com">blogging</a>. She loves experimenting with different types of cuisines and seldom leaves a restaurant without learning something new.
           </p>
           <p>
