removed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="twelve columns">
           <div class="section_title sub_title">
-            60 nutritious, Indian vegeterian baby food dishes that you can start feeding your toddler 6 months onwards
+            60 nutritious, Indian vegetarian baby food dishes that you can start feeding your toddler 6 months onwards
           </div>
         </div>
       </div>
@@ -134,7 +134,7 @@
         <div class="twelve columns">
           <h2 class="section_title">Buy the Book</h2>
             <p>
-            This book will be available as a kindle e-book shortly on <a href="http://amazon.com">Amazon</a>. Do <a href="http://signup.babyfoodrecipes.in/">register here</a> to get notified when the book becomes available. You can download it on kindle and read it at your convenience. Towards the end of 2012, if the world survives we will come out with a phyiscal hard copy.
+            This book will be available as a kindle e-book shortly on <a href="http://amazon.com">Amazon</a>. Do <a href="http://signup.babyfoodrecipes.in/">register here</a> to get notified when the book becomes available. You can download it on kindle and read it at your convenience. Towards the end of 2012, if the world survives we will come out with a physical hard copy.
             </p>
 
             <p>
