--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
         <div class="twelve columns">
           <h2 class="section_title">Buy the Book</h2>
             <p>
-            This book will be available as a kindle e-book shortly on <a href="http://amazon.com">Amazon</a>. Do <a href="http://signup.babyfoodrecipes.in/">register here</a> to get notified when the book becomes available. You can download it on kindle and read it at your convenience. Towards the end of 2012, if the world survives we will come out with a physical hard copy.
-            </p>
+            This book is available as a kindle e-book shortly on <a href="http://www.amazon.com/dp/B007QVHWDO">Amazon Kindle Store</a>. You can buy the book on kindle and read it at your convenience. </p>
 
             <p>
               <table border=0 cellspacing=0 cellpadding=0 width=100%>
@@ -143,9 +142,11 @@
               <td>
               <!-- Facebook Badge START --><a href="http://www.facebook.com/babyfoodrecipes" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="60 Baby Food Recipes">60 Baby Food Recipes</a><span style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; line-height: 16px; font-variant: normal; font-style: normal; font-weight: normal; color: #555555; text-decoration: none;text-align:center"></span><br/><a href="http://www.facebook.com/babyfoodrecipes" target="_TOP" title="60 Baby Food Recipes"><img src="http://badge.facebook.com/badge/348106245203010.3174.332937826.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
               </td>
+              <!--
               <td> 
               <a href="http://signup.babyfoodrecipes.in/"><img width=100px src="images/launchrock.jpeg" /></a>
               </td>
+              -->
               <td>
                 <a href="http://twitter.com/romasharma"><img src="http://www.twitterbuttons.com/upload/images/aec0b3670ent11.png" title="Follow Roma Sharma" alt="follow @romashrama" width="152" height="68" /></a>
 									
