added book download link

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="twelve columns">
           <h2 class="section_title">Buy the Book</h2>
             <p>
-            This book is available as a kindle e-book shortly on <a href="http://www.amazon.com/dp/B007QVHWDO">Amazon Kindle Store</a>. You can buy the book on kindle and read it at your convenience. </p>
+            This book is available as a kindle e-book on <a href="http://www.amazon.com/dp/B007QVHWDO">Amazon Kindle Store</a>. You can <a href="http://www.amazon.com/dp/B007QVHWDO">buy the book</a> on kindle and read it at your convenience. </p>
 
             <p>
               <table border=0 cellspacing=0 cellpadding=0 width=100%>
