added subscribe option

--- a/new.html
+++ b/new.html
@@ -37,9 +37,9 @@
 		
 			<h1><a href="/">60 Great Baby Food Recipes!</a></h1>
 
-			<form action="index.html#">
+			<form action="http://babyfoodrecipes.us1.list-manage1.com/subscribe/post?u=7b6b621e26c8fd74fd8ae8944&amp;id=5616dcad88" method="post">
 				<fieldset>
-					<input type="text" name="email" onfocus="if(this.value=='Enter your email...')this.value='';" onblur="if(this.value=='')this.value='Enter your email...';" value="Enter your email..." />
+					<input type="text" name="EMAIL" onfocus="if(this.value=='Enter your email...')this.value='';" onblur="if(this.value=='')this.value='Enter your email...';" value="Enter your email..." />
 					<input type="submit" name="subscribe" value="Subscribe" />
 				</fieldset>
 			</form>
@@ -191,7 +191,7 @@
 	<!-- FOOTER -->
 	<div class="footer group">
 		<p>&copy; 2012 Roma Sharma | <a href="index.html#">Privacy Statement</a> | <a href="index.html#">Terms</a></p>
-		<p class="last"><a href="http://romasharma.com">blog</a> | <a href="index.html#">Contact</a> | <a href="index.html#">Subscribe</a></p>
+		<p class="last"><a href="http://romasharma.com">blog</a> | <a href="index.html#">Contact</a> | <a href="http://eepurl.com/k1YV1">Subscribe</a></p>
 	</div><!-- /footer -->
 	
 
