updated the file to new template

--- a/new.html
+++ b/new.html
@@ -1,61 +1,11 @@
-<!DOCTYPE html> 
-
-<html lang="en"> 
-<head> 
-
-	<meta charset="utf-8" /> 
-	
-	<title>60 Great Baby Food Recipes - Book by Roma Sharma!</title> 
-	
-	<!--[if !IE 6]><!--> 
-	<link rel="stylesheet" href="css/master.css" /> 
-	<link rel="stylesheet" href="js/fancybox/jquery.fancybox-1.3.4.css" />
-	
-	<!--[if IE 7]><link rel="stylesheet" href="css/ie7.css" /><![endif]-->
-	<!--[if IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-	<script src="js/jquery.tinycarousel.min.js" type="text/javascript"></script>
-	<script src="js/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
-	<script src="js/cufon.js" type="text/javascript"></script>
-	<script src="js/aller.font.js" type="text/javascript"></script> 
-	<script src="js/scripts.js" type="text/javascript"></script> 
-	<!--<![endif]-->
-	
-	<!--[if lt IE 8]>
-	<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js" type="text/javascript"></script>
-	<![endif]-->
-	
-</head>
-
-<body>
-
-	<div class="container group">
-	
-		<!-- HEADER -->
-		<div class="header group">
-		
-			<h1><a href="/">60 Great Baby Food Recipes!</a></h1>
-
-			<form action="http://babyfoodrecipes.us1.list-manage1.com/subscribe/post?u=7b6b621e26c8fd74fd8ae8944&amp;id=5616dcad88" method="post">
-				<fieldset>
-					<input type="text" name="EMAIL" onfocus="if(this.value=='Enter your email...')this.value='';" onblur="if(this.value=='')this.value='Enter your email...';" value="Enter your email..." />
-					<input type="submit" name="subscribe" value="Subscribe" />
-				</fieldset>
-			</form>
-			
-			<ul class="social">
-				<li><a href="http://www.facebook.com/babyfoodrecipes" class="fb">Facebook</a></li>
-				<li><a href="http://twitter.com/romasharma" class="twit">Twitter</a></li>
-				<li><a href="http://www.linkedin.com/in/romasharma" class="lin">LinkedIn</a></li>
-			</ul>
-		
-		</div><!-- /header -->
+---
+layout: default
+---
 		
 		<!-- INTRO -->
 		<div class="intro group">
 			
-			<img src="img/book.png" alt="" class="book" />
+			<img src="/img/book.png" alt="" class="book" />
 			<h2>60 nutritious, Indian vegetarian baby food dishes that you can start feeding your toddler 6 months onwards.</h2>
             <p>The book contains a set of 60 <b>Indian Vegetarian recipes</b> categorized based on the baby’s age. It takes you through the stages of the baby’s growth from 6 to 18 months. The recipes contain notes to help you get a good end result and nutritional value of the dish being prepared that will help you decide whats best for your baby.</p>
             <p>The book also contains information on <b>how to introduce solids</b> to the baby - the age at which you can start nutritive food of the right texture for your baby. Tips have been provided on how to tackle a fussy eater and a baby who dislikes milk. </p>
@@ -156,15 +106,15 @@
 				
 				<div class="viewport">
 					<ul class="overview">
-						<li><a href="images/sprouts_bhel.JPG" rel="fancybox"><img src="images/sprouts_bhel.JPG" alt="Sprouts Bhel" width=230 /></a> <a href="images/sprouts_bhel.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="images/aata_halwa.JPG" rel="fancybox"><img src="images/aata_halwa.JPG" alt="" /></a> <a href="images/aata_halwa.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="images/moong_chaat.JPG" rel="fancybox"><img src="images/moong_chaat.JPG" alt="" /></a> <a href="images/moong_chaat.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="images/vermicelli_upma.JPG" rel="fancybox"><img src="images/vermicelli_upma.JPG" alt="" /></a> <a href="images/vermicelli_upma.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="images/mini_idlies.JPG" rel="fancybox"><img src="images/mini_idlies.JPG" alt="" /></a> <a href="images/mini_idlies.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="images/carrot_halwa.JPG" rel="fancybox"><img src="images/carrot_halwa.JPG" alt="" /></a> <a href="images/carrot_halwa.JPG" class="zoom" rel="fancybox">Zoom</a></li>
+						<li><a href="/images/sprouts_bhel.JPG" rel="fancybox"><img src="/images/sprouts_bhel.JPG" alt="Sprouts Bhel" width=230 /></a> <a href="/images/sprouts_bhel.JPG" class="zoom" rel="fancybox">Zoom</a></li>
+						<li><a href="/images/aata_halwa.JPG" rel="fancybox"><img src="/images/aata_halwa.JPG" alt="" /></a> <a href="/images/aata_halwa.JPG" class="zoom" rel="fancybox">Zoom</a></li>
+						<li><a href="/images/moong_chaat.JPG" rel="fancybox"><img src="/images/moong_chaat.JPG" alt="" /></a> <a href="/images/moong_chaat.JPG" class="zoom" rel="fancybox">Zoom</a></li>
+						<li><a href="/images/vermicelli_upma.JPG" rel="fancybox"><img src="/images/vermicelli_upma.JPG" alt="" /></a> <a href="/images/vermicelli_upma.JPG" class="zoom" rel="fancybox">Zoom</a></li>
+						<li><a href="/images/mini_idlies.JPG" rel="fancybox"><img src="/images/mini_idlies.JPG" alt="" /></a> <a href="/images/mini_idlies.JPG" class="zoom" rel="fancybox">Zoom</a></li>
+						<li><a href="/images/carrot_halwa.JPG" rel="fancybox"><img src="/images/carrot_halwa.JPG" alt="" /></a> <a href="/images/carrot_halwa.JPG" class="zoom" rel="fancybox">Zoom</a></li>
 <!--
-						<li><a href="img/sample-page.jpg" rel="fancybox"><img src="img/sample-page.jpg" alt="" /></a> <a href="img/sample-page.jpg" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="img/sample-page.jpg" rel="fancybox"><img src="img/sample-page.jpg" alt="" /></a> <a href="img/sample-page.jpg" class="zoom" rel="fancybox">Zoom</a></li>
+						<li><a href="/img/sample-page.jpg" rel="fancybox"><img src="/img/sample-page.jpg" alt="" /></a> <a href="/img/sample-page.jpg" class="zoom" rel="fancybox">Zoom</a></li>
+						<li><a href="/img/sample-page.jpg" rel="fancybox"><img src="/img/sample-page.jpg" alt="" /></a> <a href="/img/sample-page.jpg" class="zoom" rel="fancybox">Zoom</a></li>
 -->
 					</ul>
 				</div>
@@ -186,16 +136,3 @@
           <p><a href="http://romasharma.com" class="button">More about me</a></p>
 		</div><!-- /final -->
 	
-	</div><!-- /container -->
-	
-	<!-- FOOTER -->
-	<div class="footer group">
-		<p>&copy; 2012 Roma Sharma | <a href="index.html#">Privacy Statement</a> | <a href="index.html#">Terms</a></p>
-		<p class="last"><a href="http://romasharma.com">blog</a> | <a href="index.html#">Contact</a> | <a href="http://eepurl.com/k1YV1">Subscribe</a></p>
-	</div><!-- /footer -->
-	
-
-<script type="text/javascript">Cufon.now();</script>	
-</body>
-
-</html>
