--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,23 @@ permalink: /contact
 <div class="page group">
   <h3>Contact Me</h3>
 
+  <div id="wufoo-z7x3x5">
+    Fill out my <a href="http://romaspace.wufoo.com/forms/z7x3x5">online form</a>.
+  </div>
+  <script type="text/javascript">var z7x3x5;(function(d, t) {
+    var s = d.createElement(t), options = {
+      'userName':'romaspace', 
+      'formHash':'z7x3x5', 
+      'autoResize':true,
+      'height':'517',
+      'async':true,
+      'header':'show'};
+    s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
+    s.onload = s.onreadystatechange = function() {
+      var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+      try { z7x3x5 = new WufooForm();z7x3x5.initialize(options);z7x3x5.display(); } catch (e) {}};
+    var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+    })(document, 'script');</script>
 
 </div>
 
