--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 title: Contact Me
-permalink: /contact
+permalink: /contact/
 ---
 <div class="page group">
-  <h3>Contact Me</h3>
 
   <div id="wufoo-z7x3x5">
     Fill out my <a href="http://romaspace.wufoo.com/forms/z7x3x5">online form</a>.
