--- a/new.html
+++ b/new.html
@@ -7,8 +7,8 @@ layout: default
 			
 			<img src="/img/book.png" alt="" class="book" />
 			<h2>60 nutritious, Indian vegetarian baby food dishes that you can start feeding your toddler 6 months onwards.</h2>
-            <p>The book contains a set of 60 <b>Indian Vegetarian recipes</b> categorized based on the baby’s age. It takes you through the stages of the baby’s growth from 6 to 18 months. The recipes contain notes to help you get a good end result and nutritional value of the dish being prepared that will help you decide whats best for your baby.</p>
-            <p>The book also contains information on <b>how to introduce solids</b> to the baby - the age at which you can start nutritive food of the right texture for your baby. Tips have been provided on how to tackle a fussy eater and a baby who dislikes milk. </p>
+            <p>The book contains a set of 60 <b>Indian Vegetarian recipes</b> categorized based on the baby’s age. It takes you through the stages of the baby’s growth from 6 to 18 months. The recipes contain notes to help you get a good end result. Most recipes also contain nutritional value of the dish, which will help you decide whats best for your baby.</p>
+            <p>The book contains information on <b>how to introduce solids</b> to the baby - the age at which you can start nutritive food of the right texture for your baby. Tips have been provided on how to tackle a fussy eater and a baby who dislikes milk. </p>
 
 		</div><!-- /intro -->
 		
