added two posts

--- a/index.html
+++ b/index.html
@@ -107,12 +107,36 @@ layout: default
 				
 				<div class="viewport">
 					<ul class="overview">
-						<li><a href="/images/sprouts_bhel.JPG" rel="fancybox"><img src="/images/sprouts_bhel.JPG" alt="Sprouts Bhel" width=230 /></a> <a href="/images/sprouts_bhel.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="/images/aata_halwa.JPG" rel="fancybox"><img src="/images/aata_halwa.JPG" alt="" /></a> <a href="/images/aata_halwa.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="/images/moong_chaat.JPG" rel="fancybox"><img src="/images/moong_chaat.JPG" alt="" /></a> <a href="/images/moong_chaat.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="/images/vermicelli_upma.JPG" rel="fancybox"><img src="/images/vermicelli_upma.JPG" alt="" /></a> <a href="/images/vermicelli_upma.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="/images/mini_idlies.JPG" rel="fancybox"><img src="/images/mini_idlies.JPG" alt="" /></a> <a href="/images/mini_idlies.JPG" class="zoom" rel="fancybox">Zoom</a></li>
-						<li><a href="/images/carrot_halwa.JPG" rel="fancybox"><img src="/images/carrot_halwa.JPG" alt="" /></a> <a href="/images/carrot_halwa.JPG" class="zoom" rel="fancybox">Zoom</a></li>
+						<li>
+                          <a href="/sprouts-bhel" ><img src="/images/sprouts_bhel.JPG" alt="Sprouts Bhel" width=230 /></a> 
+                          <a href="/sprouts_bhel" class="zoom" rel="fancybox1">Zoom</a>
+                        </li>
+						
+                        <li>
+                          <a href="/aata-halwa" rel="fancybox1"><img src="/images/aata_halwa.JPG" alt="" /></a> 
+                          <a href="/aata-halwa" class="zoom" >Zoom</a>
+                        </li>
+
+						<li>
+                          <a href="/moong-chaat" rel="fancybox1"><img src="/images/moong_chaat.JPG" alt="" /></a> 
+                          <a href="/moong-chaat" class="zoom" rel="fancybox1">Zoom</a>
+                        </li>
+
+						<li>
+                            <a href="/vermicelli-upma" rel="fancybox1"><img src="/images/vermicelli_upma.JPG" alt="" /></a> 
+                            <a href="/vermicelli-upma" class="zoom" rel="fancybox1">Zoom</a>
+                        </li>
+
+						<li>
+                            <a href="/mini-idlies" rel="fancybox1"><img src="/images/mini_idlies.JPG" alt="" /></a> 
+                            <a href="/mini-idlies" class="zoom" rel="fancybox1">Zoom</a>
+                        </li>
+
+						<li>
+                          <a href="/carrot-halwa" rel="fancybox1"><img src="/images/carrot_halwa.JPG" alt="" /></a> 
+                          <a href="/carrot-halwa" class="zoom" rel="fancybox1">Zoom</a>
+                        </li>
+
 <!--
 						<li><a href="/img/sample-page.jpg" rel="fancybox"><img src="/img/sample-page.jpg" alt="" /></a> <a href="/img/sample-page.jpg" class="zoom" rel="fancybox">Zoom</a></li>
 						<li><a href="/img/sample-page.jpg" rel="fancybox"><img src="/img/sample-page.jpg" alt="" /></a> <a href="/img/sample-page.jpg" class="zoom" rel="fancybox">Zoom</a></li>
