updated teh content

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@ layout: default
 		<div class="features group">
 		
 			<div>
-				<h4 class="ebook">Rich Table of Contents</h4>
-				<p>60 Recipes have been divided in 4 phases of babies growth from 6 month to 2 year. Each phase has its own challenges of right food for digestion and nutrient intake.</p>
+				<h4 class="ebook"><a href="/table-of-contents">Rich Table of Contents</a></h4>
+				<p>60 Recipes have been divided in 4 phases of babies growth from 6 month to 2 year. Each phase has its own challenges of right food for digestion and nutrient intake. <a href="/table-of-contents"><b>Have a look at the table of contents</b></a>.</p>
 			</div>
 			<div>
 				<h4 class="hq">High Quality Images </h4>
-				<p>A picture often speaks a thousand words. This book contains high quality images of recipes which will definitely appeal to you and to your baby.</p>
+				<p>A picture often speaks a thousand words. This book contains high quality images of recipes which will definitely appeal to you and to your baby. <br/></p>
 			</div>
 			<div>
 				<h4 class="epub">Vegetarian Recipes</h4>
