added event announcement

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: default
             <p>The book contains a set of 60 <b>Indian Vegetarian recipes</b> categorized based on the baby’s age. It takes you through the stages of the baby’s growth from 6 to 18 months. The recipes contain notes to help you get a good end result and nutritional value of the dish being prepared that will help you decide whats best for your baby.</p>
             <p>The book also contains information on <b>how to introduce solids</b> to the baby - the age at which you can start nutritive food of the right texture for your baby. Tips have been provided on how to tackle a fussy eater and a baby who dislikes milk. </p>
 
+            <p class="announcement">We are hosting an event for all moms out there. Do <b><a href="/event">share your baby's favourite food</a></b> to participate in the event and stand a chance to get this book</p>
 		</div><!-- /intro -->
 		
 		<!-- PRICE -->
