--- a/index.html
+++ b/index.html
@@ -507,6 +507,21 @@ The main aim of this book is to simplify this phase by creating food that is not
 
         <!-- Custom -->
         <script type="text/javascript" src="js/jquery-func.js"></script>
+   <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-8744648-12']);
+      _gaq.push(['_setDomainName', 'babyfoodrecipes.in']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+       })();
+
+     </script>
+  
 	<!-- ======================= End JQuery libs ======================= -->
 	    
     
