--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8"/>
 
     <!-- Page Title -->
-    <title>60 Great Baby Food Recipes - A baby cookbook for toddlers by Roma Sharma</title>
+    <title>60 Great Baby Food Recipes - A cook book for babies by Roma Sharma</title>
 
     <!-- Responsive Metatag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Page Description and Author -->
-    <meta name="description" content="60 nutritious, Indian vegetarian baby food that you can start feeding your toddler 6 months onwards">
+    <meta name="description" content="60 nutritious, Indian vegetarian baby food that you can start feeding your baby 6 months onwards">
     <meta name="author" content="Roma Sharma">
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
@@ -154,7 +154,7 @@
 
             <div class="row-fluid">
               <div class="span6">
-                <p>This book is an encapsulation of my journey as a mother and my learnings in the process introducing solids to my babies. It contains 60 handpicked, vegetarian recipes that have been reviewed by experts like a pediatrician and nutritionist to ensure accuracy in the information provided. The focus is on babies between the age of 6-18 months. The recipes have been categorized based on the baby's age. </p>
+                <p>This book is an encapsulation of my journey as a mother and my learnings in the process introducing solids to my babies. It contains 60 handpicked, vegetarian recipes that have been reviewed by experts like a pediatrician and nutritionist to ensure accuracy in the information provided. The focus is on babies between the age of 6 - 24 months. The recipes have been categorized based on the baby's age. </p>
               </div>
 
               <div class="span6">
@@ -167,7 +167,7 @@ The main aim of this book is to simplify this phase by creating food that is not
 		            <div class="span6">
 		                <div class="item">
 		                    <h2 class="pull-left"> <img src="img/features-bike.png" alt="icon" class="pull-left">  Nutritious Health Recipes </h2>
-		                    <p>60 recipes have been divided in 4 phases of a baby's growth from 6 months to above one year. Each phase has its own challenges of right food for, digestion and nutrient intake..</p>
+		                    <p>60 recipes have been divided in 4 phases of a baby's growth from 6 months to above one year. Each phase has its own challenges with respect to digestion and nutrient intake.</p>
 		                </div>
 		                <div class="item">
 		                    <h2 class="pull-left"> <img src="img/features-showcase.png" alt="icon" class="pull-left">  Home Remedies </h2>
@@ -214,7 +214,7 @@ The main aim of this book is to simplify this phase by creating food that is not
                         </a>
                         <div class="imageinfo">
                             <h2 class="text-center"><a href="img/roma/mini_idlies.JPG" class="lightbox_image" title="Mini Idlies"> Mini Idlis </a></h2>
-                            <p class="text-center">After the age of 8 months babies can be given soft idlies, dosas, ect.</p>
+                            <p class="text-center">After the age of 8 months babies can be given soft idlies, dosas, etc.</p>
                         </div>
                     </div>
 
@@ -303,8 +303,8 @@ The main aim of this book is to simplify this phase by creating food that is not
     			<div class="row-fluid box one">
     				<div class="span6">
     					<h3>Amazon Kindle E-book</h3>
-              <p>Almost 6 years ago I staring publishing Indian baby food recipes on my blog and I received amazing responses from moms all over. Inspired by this, on 13th Apr 2012, “<a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/">60 Great Baby Food Recipes</a>” eBook was made available on KDP amazon, for instant global access. The eBook has completed more than a year and continues to to receive patronage from Indian moms, globally.</p>
-                        <a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/" class="btn">Buy e-Book Link <img src="img/buynow-icon.png" alt="icon"></a>
+              <p>Almost 6 years ago I staring publishing Indian baby food recipes on <a href="http://romasharma.com">my blog</a> and I received amazing responses from moms all over. Inspired by this, on 13th Apr 2012, “<a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/">60 Great Baby Food Recipes</a>” eBook was made available on KDP amazon, for instant global access. The eBook has completed more than a year and continues to to receive patronage from Indian moms, globally.</p>
+                        <a href="http://www.amazon.com/Great-Recipes-your-Baby-ebook/dp/B007QVHWDO/" class="btn">Buy e-Book <img src="img/buynow-icon.png" alt="icon"></a>
     				</div>
     				<div class="span6">
                         <div id="myCarouselimg" class="carousel slide">
@@ -330,7 +330,7 @@ The main aim of this book is to simplify this phase by creating food that is not
     				</div>
     				<div class="span6">
     					<h3>Limited Paperback Edition </h3>
-    					<p>Based on the growing requests we have now released a paperback edition of the book. The book is an A5-sized fully illustrated, premium quality book designed to be not only informative but also visually appealing. It is a perfect gift for a little baby when you first visit him or her.</p>
+    					<p>Based on growing requests we have now released a paperback edition of the book. The book is an A5-sized fully illustrated, premium quality book designed to be not only informative but also visually appealing. It is a perfect gift for a little baby when you first visit him or her.</p>
               <a href="http://babyfoodrecipes.wufoo.com/forms/z7x4m1/" onclick="window.open(this.href,  null, 'height=625, width=680, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false" class="btn">Buy Book <img src="img/buynow-icon.png" alt="icon"></a>
     				</div>
     			</div>
@@ -346,7 +346,7 @@ The main aim of this book is to simplify this phase by creating food that is not
     	<div class="container">
     		<div class="wrapp">
     			<div class="row-fuid title">
-                    <h1 class="text-center">what happy people are saying</h1>         
+                    <h1 class="text-center">Experts Spea</h1>         
                 </div>
 
                 <div class="row-fluid">
@@ -362,14 +362,14 @@ The main aim of this book is to simplify this phase by creating food that is not
                             <div class="carousel-inner text-center">
                                 <div class="active item">
                                     <blockquote>
-                                        “What I liked about this is that it is not a recipe book alone. It walks you through the food that you can feed your baby as it grows. There was no neat book that told us what to feed when the kid starts teething, or when the kid has grown to be a toddler. It told us what to feed when the baby is cranky or acts fussy with food. This book helped us get exactly what we looking for.”
-                                        <cite> - Gururaj Potnis </cite>
+                                       “As a pediatrician, I have always looked for recipes for children that are made from natural and easily available ingredients at home. I am myself a cooking enthusiast and have believed that cooking at home inculcates healthy eating habits in growing children. Roma Sharma has made a wonderful contribution through this unique book by offering variety to fussy eaters and helping desperate mothers. Her own experience as the mother of two young children is reflected in this effort. The meals are also nutritionally well balanced.” 
+                                        <cite> - Dr. Anuradha H.S., Child and Teen consultant </cite>
                                     </blockquote>
                                 </div>
                                 <div class="item">
                                     <blockquote>
-                                       “As a pediatrician, I have always looked for recipes for children that are made from natural and easily available ingredients at home. I am myself a cooking enthusiast and have believed that cooking at home inculcates healthy eating habits in growing children. Roma Sharma has made a wonderful contribution through this unique book by offering variety to fussy eaters and helping desperate mothers. Her own experience as the mother of two young children is reflected in this effort. The meals are also nutritionally well balanced.” 
-                                       <cite> - Dr. Anuradha H.S., Child and Teen consultant </cite>
+                                        “What I liked about this is that it is not a recipe book alone. It walks you through the food that you can feed your baby as it grows. There was no neat book that told us what to feed when the kid starts teething, or when the kid has grown to be a toddler. It told us what to feed when the baby is cranky or acts fussy with food. This book helped us get exactly what we looking for.”
+                                       <cite> - Gururaj Potnis </cite>
                                     </blockquote>
                                 </div>
                                 <div class="item">
@@ -401,8 +401,8 @@ The main aim of this book is to simplify this phase by creating food that is not
 	    		<!-- Title -->
 		        <div class="row-fluid text-center title">
 		            <div class="divider"></div>
-		            <h1>About the Author - Roma Sharma</h1>
-		            <p>Roma is a software engineer by education and a chef by passion. After working for 6 years in the IT industry she turned a home maker.</p>
+		            <h1>About the Author</h1>
+		            <p></p>
 		        </div>
 		        <!-- End Title -->
     			
@@ -412,7 +412,7 @@ The main aim of this book is to simplify this phase by creating food that is not
     				</div>
     				<div class="span6">
     					<h3>Roma Sharma </h3>
-              <p> With two kids now she spends most of her time creating new dishes to excite them with. Besides cooking, she has hobbies like photography and blogging. She loves experimenting with different types of cuisines and seldom leaves a restaurant without learning something new.</p>
+              <p> Roma is a software engineer by education and a chef by passion. After working for 6 years in the IT industry she turned a home maker. With two kids now she spends most of her time creating new dishes to excite them with. Besides cooking, she has hobbies like photography and blogging. She loves experimenting with different types of cuisines.</p>
 
               <p>When Roma first had a baby she realized that baby food is a confusing subject. The type of food that can be fed to a baby at each stage of growth is something that needs to be checked every time something new is introduced. Her baby’s pediatrician was helpful in this regard. She would clarify doubts on ingredients permitted for the baby at each stage. She also had the good fortune of talking to her grandmother about the dishes she use to feed her kids. Her mother shared knowledge she had on medicinal and travel food.</p>
 
