made some fixes

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	            </div>    
 	            <div class="row-fluid">
 	                <div class="span6 pull-right">
-	                   <h1 class="animated fadeInRight delay4">60 nutritious, Indian vegetarian baby food dishes that you can start feeding your toddler 6 months onwards.</h1>
+	                   <h1 class="animated fadeInRight delay4">60 nutritious, Indian vegetarian baby food dishes that you can start feeding your baby 6 months onwards.</h1>
                        <h3 class="animated fadeInRight delay5"></h3>
                        <div class="buttons bigfigure animated fadeInUp delay6">
                            <a href="#menu-book" class="btn tour"> Know More <img src="img/btn-tour-icon.png" alt="icon"> </a>
@@ -346,7 +346,7 @@ The main aim of this book is to simplify this phase by creating food that is not
     	<div class="container">
     		<div class="wrapp">
     			<div class="row-fuid title">
-                    <h1 class="text-center">Experts Spea</h1>         
+                    <h1 class="text-center">Experts Speak</h1>         
                 </div>
 
                 <div class="row-fluid">
