fixed about the author

--- a/index.html
+++ b/index.html
@@ -414,14 +414,14 @@ The main aim of this book is to simplify this phase by creating food that is not
     					<h3>Roma Sharma </h3>
               <p> Roma is a software engineer by education and a chef by passion. After working for 6 years in the IT industry she turned a home maker. With two kids now she spends most of her time creating new dishes to excite them with. Besides cooking, she has hobbies like photography and blogging. She loves experimenting with different types of cuisines.</p>
 
-              <p>When Roma first had a baby she realized that baby food is a confusing subject. The type of food that can be fed to a baby at each stage of growth is something that needs to be checked every time something new is introduced. Her baby’s pediatrician was helpful in this regard. She would clarify doubts on ingredients permitted for the baby at each stage. She also had the good fortune of talking to her grandmother about the dishes she use to feed her kids. Her mother shared knowledge she had on medicinal and travel food. Roma started <a href="http://romasharma.com">blogging</a> these recipes when her first baby was 8 months old. Along with blogging, she started writing this book when she introduced solids to her first baby 4 years ago. Now with another 18 - month old she has updated more recipes and has compiled all the information she has, to create a book that is easy to consume.</p>
+              <p>When Roma first had a baby she realized that baby food is a confusing subject. The type of food that can be fed to a baby at each stage of growth is something that needs to be checked every time something new is introduced. Her baby’s pediatrician was helpful in this regard. She would clarify doubts on ingredients permitted for the baby at each stage. She also had the good fortune of talking to her grandmother about the dishes she use to feed her kids. Her mother shared knowledge she had on medicinal and travel food.</p>
 
             </div>
           </div>
 
           <div class="row-fluid box one">
             <div class="span6">
-              <p></p>
+              <p>Roma started <a href="http://romasharma.com">blogging</a> these recipes when her first baby was 8 months old. Along with blogging, she started writing this book when she introduced solids to her first baby 4 years ago. Now with another 18 - month old she has updated more recipes and has compiled all the information she has, to create a book that is easy to consume.</p>
             </div>
 
             <div class="span6">
