changed about the author

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ The main aim of this book is to simplify this phase by creating food that is not
 		        <div class="row-fluid">
 		            <div class="span6">
 		                <div class="item">
-		                    <h2 class="pull-left"> <img src="img/features-bike.png" alt="icon" class="pull-left">  Nutritious Health Recipes </h2>
+		                    <h2 class="pull-left"> <img src="img/features-support.png" alt="icon" class="pull-left">  Nutritious Recipes </h2>
 		                    <p>60 recipes have been divided in 4 phases of a baby's growth from 6 months to above one year. Each phase has its own challenges with respect to digestion and nutrient intake.</p>
 		                </div>
 		                <div class="item">
@@ -181,7 +181,7 @@ The main aim of this book is to simplify this phase by creating food that is not
 		                    <p>This book contains only Indian Vegetarian Recipes. India's diversity is reflected in this book as it covers recipes from different parts of the country.</p> 
 		                </div>
 		                <div class="item">
-		                    <h2 class="pull-left"> <img src="img/features-support.png" alt="icon" class="pull-left"> Travel Food </h2>
+		                    <h2 class="pull-left"> <img src="img/features-bike.png" alt="icon" class="pull-left"> Travel Food </h2>
 		                    <p>Travelling with a baby can be quite a challenge as its risky to feed a little baby anything bought outside. Use travel tips provided in this book to have a great journey.</p> 
 		                </div>
 		            </div>
