--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ The main aim of this book is to simplify this phase by creating food that is not
 		   
 		            <div class="span6">
 		                <div class="item">
-		                    <h2 class="pull-left"> <img src="img/features-screen.png" alt="icon" class="pull-left"> Vegetarian Recipes</h2>
+		                    <h2 class="pull-left"> <img src="img/features-veg.png" alt="icon" class="pull-left"> Vegetarian Recipes</h2>
 		                    <p>This book contains only Indian Vegetarian Recipes. India's diversity is reflected in this book as it covers recipes from different parts of the country.</p> 
 		                </div>
 		                <div class="item">
