changed veg icon back

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ The main aim of this book is to simplify this phase by creating food that is not
 		        <div class="row-fluid">
 		            <div class="span6">
 		                <div class="item">
-		                    <h2 class="pull-left"> <img src="img/features-support.png" alt="icon" class="pull-left">  Nutritious Recipes </h2>
+		                    <h2 class="pull-left"> <img src="img/features-support.png" alt="icon" class="pull-left">  Categorized Recipes </h2>
 		                    <p>60 recipes have been divided in 4 phases of a baby's growth from 6 months to above one year. Each phase has its own challenges with respect to digestion and nutrient intake.</p>
 		                </div>
 		                <div class="item">
